name:                has-torrent
version:             0.1.0.0

synopsis:            An environment to test and develop Bit Torrent Algorithms

license:             BSD3
license-file:        LICENSE
author:              Pranav Vaish, R Sundararajan, Aadi Yogakar
maintainer:          pranav.vaish@gmail.com, dyoucme@gmail.com, ayogakar@gmail.com

category:            Network
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/vaishious/has-torrent
  subdir: src
  branch: master

library
  exposed-modules:     HasTorrent
                     , HasTorrent.Tracker
                     , HasTorrent.Bencode
                     , HasTorrent.Types
                     , HasTorrent.File
                     , HasTorrent.Types.TypesHelp
                     , HasTorrent.Tracker.UDPTracker
                     , HasTorrent.Tracker.HTTPTracker
                     , HasTorrent.Network.PeerProtocol
                     , HasTorrent.Network.Communicate
  
  other-extensions:    PackageImports
  
  build-depends:       base >=4.6
                     , mtl >=2.2
                     , cryptohash >=0.11
                     , bytestring-builder >=0.10
                     , vector >=0.11
                     , ListZipper >=1.2
                     , bytestring >=0.10
                     , containers >=0.5.3
                     , network >=2.6
                     , random >=1.1
                     , time >=1.4
                     , hslogger >=1.2
                     , transformers >=0.4
                     , bencode >=0.6
                     , text >=1.2
                     , network-uri >=2.6
                     , random-shuffle >=0.0
                     , directory >=1.2
                     , unix >=2.7
                     , disk-free-space >=0.1
                     , binary >=0.7
                     , url >=2.1
                     , HTTP >=4000.2
                     , template-haskell >=2.8
                     , unix-bytestring >=0.3.7.3
                     , http-types >=0.9
  
  hs-source-dirs: src 
  
  default-language:    Haskell2010
